Style.css
@import url(http://fonts.googleapis.com/css?family=Ubuntu|Nunito:700|Open+Sans);


/*
 * Basics
 * ======
 */


.MainContainer{
	width:80%;
	padding-left:5px;
	padding-top:60px;
    /*Offset for title bar (10 + 50) */
	margin-left:200px;
	border-left:solid black;
}

body{
	font-family: 'Open Sans', sans-serif;
}

/*
 * Navigation
 * ==========
 */
.Global{
	position:fixed;
	left:13px;
	top:96px;
    /*46 + 50 for title bar offset*/
    background:white;
    z-index:1;
}

nav details{
	padding: 10px 10px 10px 10px;
	border-color:black;
	border-radius:5px;
	border-style:solid;	
	width:154px;
}

nav details summary{
    cursor:pointer;
}

nav h1{
	font-size:150%;
	display:inline-block;
}

nav details {
  transition: height 0.3s ease-out;
}
nav details:not([open]) { height: 2em;}
nav details[open] { height: 10em;}

nav ul{
	list-style-type:none;
	margin-top:10px;
	padding:0;
}

nav ul li{
	display:block;
}

nav ul li a{
	display:block;
    text-decoration:none;
    color:black;
    border-top: 1px solid black;
    padding: 5px 15px;
    background:rgb(235, 235, 235);
    margin-left: 1px;
    white-space: nowrap;
	transition:background .4s, color .4s;
}

nav ul li a:hover {
    background:black;
	color:white;
    text-decoration:none;
}




/*
 * Headings
 * ========
 */

h1{
	font-family: 'Nunito', sans-serif;
	font-size:600%;
	margin:0;
}
header p{
    padding:0 0 0 10px;
    margin:0;
    font-weight:bold;
    font-size:200%;
    font-family:"Ubuntu", sans-serif;
}
#SelfPromo{
    color:black;
}
#SelfPromo:hover{
    text-decoration:none;
    color:#00008B;
}

h2, h3, h4, h5, h6{
	font-family:"Ubuntu", sans-serif;
}

/*
 * Table of Contents
 * =================
 */

.MainContainer nav{
	width:90%;
}

.MainContainer nav tr{
    margin:0;
    padding:0;
    height:90px;
}

.MainContainer nav .BR a{
	display:inline-block;
	border-style:solid;
	border-color:black;
	margin:0;
	text-align:center;
	background-color:white;
	transition:all 0.5s ease;
	height:100px;
	position:relative;
	overflow:hidden;
    width:100%;
    color:black;
	text-decoration:none;
}

.MainContainer nav .R1 a{
    position:relative;
    top:10px;
}

.MainContainer nav .BR div{
	transition: all 0.5s ease;
	position:absolute;
	overflow:hidden;
	padding:0;
    width:100%;
}
.MainContainer nav .BR a:hover div{
	background-color:black;
	-webkit-transform:translateY(-100px);
}


.MainContainer nav table{
    width:100%;
    border-collapse:collapse;
    border-spacing: 0;
}


.NavImg{
	max-width:80%;
	height:80px;
    padding-bottom:10px;
}

nav h3{
	padding-top:18px;
	padding-bottom:32px;
}

#LongRow{
    width:40%;
}

#TL{
    /*Adds the curves individually*/
    border-top-left-radius:10px;
}
#TR{
    border-top-right-radius:10px;
}
#BL{
    border-bottom-left-radius:10px;
}
#BR{
    border-bottom-right-radius:10px;
}

/*
 * Footer
 * ======
 */

footer{
    text-align:center;
    font-family: "Lucida Console", "Courier New", monospace;
    margin-top:40px;
    padding-top:10px;
    border:solid;
    border-radius:10px;
    padding-bottom:20px;
    margin-bottom:40px;
    width:90%;
    margin-left:auto;
    margin-right:auto;
}

footer h1{
    font-size:150%;
    margin-bottom:10px;
}

summary h3{
    display:inline-block;
    margin:0;
    padding:0;
}

footer hr{
    background-image:-webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:-moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:-ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,0)); 
    margin-bottom:10px;
    margin-top:10px;
}

footer:hover{
    z-index:2;
}

/*
 * Header
 * ======
 */

.TopHeader{
    position:fixed;
    width:100%;
    background:rgb(235, 235, 235);
    top:0;
    left:0;
    margin:0;
    padding:0 0 0 5px;
    z-index:2;
}

.TopHeader h1{
    font-size:200%;
    line-height:62px;
    display:inline-block;
}

#HidTitle{
    opacity:0;
    transition: opacity 0.5s ease;
    display:inline;
    margin-left:30px;
}

header a{
    color:black;
}
.TopHeader a:hover{
    /*3D Text Shadows from: http://www.3dcsstext.com/*/
    text-shadow:0px 0px 0 rgb(231,231,231),0px 1px 0 rgb(216,216,216),0px 2px 0 rgb(202,202,202),0px 3px 0 rgb(187,187,187),0px 4px 0 rgb(173,173,173),0px 5px 0 rgb(158,158,158), 0px 6px 0 rgb(144,144,144),0px 7px 6px rgba(0,0,0,0.6),0px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
    text-decoration:none;
}
header a:hover #HidTitle{
    opacity:1;
}

.SearchBox{
    float:right;
    width:30%;
    
}
.gsc-control-cse{
    background:rgb(235, 235, 235) !important;
    border:0 !important;
}

/*
 * Sidebar
 * =======
 */

.Sidebar{
    bottom:calc(50vh - 50px);
    height:80px;
    position:fixed;
	right:0;
    color: #000000;
    background-color: rgba(235, 235, 235, 0.80);
    font-size: 12px;
    padding: 10px 10px 10px 10px;
    text-align:center;
    text-decoration:none;
    display:block;
    margin:0;
}

.SidRadio{
    display:block;
}

.SidLabel{
    position:absolute;
    text-align:center;
    top:-3px;
    right:0;
    width:0px;
    background-color:black;
    color:white;
    opacity:0;
    height:0;
    font-size:1%;
    transition: opacity 0.5s ease, width 0.35s ease;
    overflow:hidden;
    white-space:nowrap;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select:none;
}

.SidHolder:hover .SidLabel{
    opacity:1;
    height:17px;
    width:150px;
    right:31px;
    font-size:100%;
}

.SidHolder{
    position:relative;
}

/*
 * Misc.
 * =====
 */

hr{
	display:block;
	border: 0;
	height: 1px;
	background-image:-webkit-linear-gradient(left, rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:-moz-linear-gradient(left, rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:-ms-linear-gradient(left, rgba(0,0,0,1), rgba(0,0,0,0)); 
	background-image:linear-gradient(left, rgba(0,0,0,1), rgba(0,0,0,0)); 
    margin-top:30px;
    margin-bottom:30px;
}

.BackTop {
	position:fixed;
	bottom:0;
	right:0;
    color: #000000;
    background-color: rgba(235, 235, 235, 0.80);
    font-size: 12px;
    padding: 1em;
    text-align:center;
    text-decoration:none;
    display:block;
    transition: background-color 0.5s ease, color 0.5s ease;
}
.BackTop:hover{
	background-color:black;
	color:white;
    text-decoration:none;
}

.YouTube{
	float:right;
	height:315px;
	width:560px;
	display:block;
}

nav{
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

sup{
    font-family: "Lucida Console", "Courier New", monospace;
}

a{
    color:blue;
    text-decoration:none;
    transition:all 0.5s ease;
}
a:hover{
    text-decoration:underline;
    color:black;
}

.Credits{
    font-size:75%;
    font-family: "Lucida Console", "Courier New", monospace;
}

.DownButton{
    display:block;
    float: left;
    position: relative;
    top: -10px;
    padding-right: 3px;
    height:30px;
    width:30px;
    margin-top:10px;
    background-image:url("Images/DownArrow.png");
    background-repeat:no-repeat;
}
.DownButton:hover{
    background-image:url("Images/InvertDownArrow.png");
}

